@@ -25,7 +25,6 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import com.crm.demo.model.Meeting;
 import com.crm.demo.model.Project;
 import com.crm.demo.model.Report;
-import com.crm.demo.model.ReportAttachment;
 import com.crm.demo.model.Task;
 import com.crm.demo.model.User;
 import com.crm.demo.model.Attendance;
@@ -146,7 +145,7 @@ public class AdminController extends BaseController {
 				userRepository.findByTenantSegment(tenant).stream()
 						.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole())
 								  && !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
-						.collect(Collectors.toList()));
+						.toList());
 		model.addAttribute(ATTR_ACTIVE_PAGE, PAGE_SCHEDULE_MEETING);
 	}
 
@@ -308,7 +307,7 @@ public class AdminController extends BaseController {
 		var employees = users.stream()
 				.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole()))
 				.filter(u -> !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
-				.collect(Collectors.toList());
+				.toList();
 		var tasks = tenant.isBlank()
 				? taskRepository.findAll()
 				: taskRepository.findByTenantSegment(tenant);
@@ -408,7 +407,7 @@ public class AdminController extends BaseController {
 		var users = userRepository.findByTenantSegment(tenant).stream()
 				.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole())
 						  && !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
-				.collect(Collectors.toList());
+				.toList();
 
 		var active   = users.stream().filter(User::isActive).count();
 		var inactive = users.size() - active;
@@ -1026,7 +1025,7 @@ public class AdminController extends BaseController {
 			if (m.getMeetingTime() == null) return true;
 			int dur = (m.getDuration() != null) ? m.getDuration() : 0;
 			return !m.getMeetingTime().plusMinutes(dur).isBefore(now);
-		}).collect(Collectors.toList());
+		}).toList();
 	}
 
 	private List<Meeting> getPastMeetingsForUser(String tenant, String username) {
@@ -1040,7 +1039,7 @@ public class AdminController extends BaseController {
 			if (m.getMeetingTime() == null) return false;
 			int dur = (m.getDuration() != null) ? m.getDuration() : 0;
 			return m.getMeetingTime().plusMinutes(dur).isBefore(now);
-		}).collect(Collectors.toList());
+		}).toList();
 	}
 
 	@GetMapping("/schedule-meeting")
